--- a/index.html
+++ b/index.html
@@ -2,5 +2,9 @@
 <html>
     <head>
         <title>Home</title>
+        <script>
+            var d = new Date();
+            document.title = D.getHours() + ":" + D.getMinutes()
+        </script>
     </head>
 </html>
